# Physics

./: .gitignore  .gitmodules  CMakeLists.txt
hui/: event.hpp  widget.hpp
libs/: border.hpp  button_dorisovka.hpp  camera_control.hpp  circle.hpp  color_picker.hpp  dorisovka.hpp  dorisovka_buttons.hpp  editable_text.hpp  file_button.hpp  info_table.hpp  list_objects.hpp  main_field.hpp  object.hpp  object_buttons.hpp  object_info.hpp  plane.hpp  plugin_upload.hpp  pyramid.hpp  scene_manager.hpp  square.hpp  toolbar.hpp  topbar.hpp  triangle.hpp  view.hpp  view_widget_list.hpp  widget_title.hpp
libs/GUI/graphics/: colors.hpp
libs/GUI/include/: button.hpp  draw.hpp  scrollbar.hpp  text.hpp  widget.hpp
libs/GUI/src/: draw.cpp  event.cpp  scrollbar.cpp
libs/GraphLib/include/: graphics.hpp
libs/GraphLib/src/: graphics_sfml.cpp
libs/geometry/include/: vector.hpp
libs/geometry/src/: vector.cpp
plugins/: CMakeLists.txt  dr4_backend.cpp  dr4_backend.hpp  plug.cpp
plugins/Artem/plugin/: libSDL3.so.0.2.24
plugins/GraphLib/include/: dr4_backend.hpp  graphics.hpp
plugins/GraphLib/src/: dr4_backend.cpp  graphics_sfml.cpp
src/: circle.cpp  color_picker.cpp  info_table.cpp  main.cpp  movement.cpp  plane.cpp  plugin_upload.cpp  raytracing_spheres.cpp  toolbar.cpp  triangle.cpp  triangles_set.cpp
